--- a/index.html
+++ b/index.html
@@ -1,4 +1,98 @@
-<!--
-Usa este archivo para tu proyecto. No olvides hacer
-la estructura correta y guardar TODO tu CSS en el archivo styles.css
- -->
+<!DOCTYPE html>
+<html>
+	<head>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>		
+		<link type= "text/css" rel="stylesheet" href='css/styles.css' />
+		<script type='text/javascript' src='js/script.js'></script>
+		
+		
+		<title>Portfolio Sergio Merida</title>
+		<!-- Favicon -->
+    		<link rel="shortcut icon" href="favicon.ico">
+		<style>#contenedor { width: 1500px; margin: 0 auto; position: inherit;}
+		</style> 
+	</head>
+		
+	<body>
+		<a id="arriba"></a>
+		<div id="contenedor">
+		<div id="container">					
+		<div class="home">		
+			<a href="http://www.cognits.co/apply" target="_blank">				
+				<img src="images/cognits-logo.png" alt="Cognits"> 
+			</a>		
+		</div>
+		<div class="home">		
+			<p>Sergio Merida</p>
+			<p>FRONT-END PADAWAN</p>
+		</div>
+
+		<div class="linea"></div>
+
+		<div class="featured">		
+			<p>Featured Work</p>
+		</div>
+
+		<div class="search">
+			<div class="hello">
+				<a href="#" target="_blank">Cognits<span> search engine</span></a>			
+			<form>
+ 	       	<input type="search" name="busqueda" value="">
+        	
+        	<button><img height="10" width="10" src="images/120px-Xmag.png" alt="Cognits"></button><br/>
+			</form>
+			</div>
+			<p>Use our search engine</p>
+		</div>
+		<div class="search">
+			<div class="inventory">
+				<a href="https://github.com/SergioMerida?tab=repositories" target="_blank">Inventory</a>			
+			</div>
+			<p>Go to inventory</p>
+		</div>
+		<div class="portfolio">
+			<div class="port">
+				<a href="profile.html" target="_blank">Profile</a>	
+			</div>
+			<p>Look at my profile</p>
+		</div>
+		<div class="portfolio">
+			<div class="battleship">
+				<a href="https://github.com/SergioMerida/Battleship" target="_blank">Battleship</a>
+		</div>
+			<p>Go to Battleship the game</p>
+		</div>
+		<div class="more">
+			<div class="engine">
+				<a href="https://github.com/SergioMerida/MotorDeBusqueda" target="_blank">Search Engine</a>	
+			</div>
+			<p>Go to search engine</p>
+		</div>
+		<div class="more">
+			<div class="send">
+				<a href="https://github.com/SergioMerida/SendEmail" target="_blank">Send Email</a>	
+			</div>
+			<p>Go to send email</p>
+		</div>
+		<div class="last">
+			<div class="guess">
+				<a href="https://github.com/SergioMerida/GuessGame" target="_blank">Guess Game</a>	
+			</div>
+			<p>Go to guess game</p>
+		</div>
+		<div class="last">
+			<div class="cash">
+				<a href="https://github.com/SergioMerida/CajaRegistradora" target="_blank">Cash Register</a>
+			</div>
+			<p>Go to cash register</p>
+		</div>
+
+		</div>
+	</div>
+	<div class="linea2">
+		<a href="#arriba">
+			<img height="100" width="100" src ="images/31838.png" alt="Cognits">
+		</a>
+	</div>
+	</body>
+</html>
